# HelixSurf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
configs/: default.yaml
cpp/include/: cuda_utils.cuh  data_spec.hpp  data_spec_packed.cuh  grid_sample_kernel.cuh  marching_rays_kernel.cuh  misc_kernel.cuh  render_utils.cuh  scatter_kernel.cuh  sliding_window.cuh  spherical_harmonics.cuh  up_sample_kernel.cuh  utils.hpp
cpp/src/: bindings.cpp  grid_sample_kernel.cu  marching_rays_kernel.cu  misc_kernel.cu  scatter_kernel.cu  sliding_window.cu  spherical_harmonics.cu  up_sample_kernel.cu
helixsurf/: __init__.py  config.py  primitives.py  version.py
helixsurf/datasets/: __init__.py  dataset_base.py  scannet.py  scannet_pretrained.py  utils.py
helixsurf/models/: __init__.py  embedder.py  grid.py  scatter.py  surf.py
helixsurf/utils/: __init__.py  backup.py  checkpoint.py  common.py  geometry.py  lr_scheduler.py  mesh.py  misc.py  timer.py  vis.py
run_scripts/: 0050_train.sh  0084_train.sh  0580_train.sh  0616_pretrained_train.sh  0616_train.sh  first_mvs.sh  next_mvs.sh
scripts/: generate_normal.py  inference.py  pretrained_geometric.py  train.py  train_pretrained.py
tools/: clang-format-all.py
